k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: learnstack-svc
  namespace: learnstack
spec:
  selector:
    app: learnstack
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
